# cr

./: Cargo.toml  README.md
src/: cli.rs  config.rs  lib.rs  main.rs  rules.rs
