[package]
name = "cr"
version = "0.1.0"
edition = "2021"
description = "A small tool to replace names in files, respecting the case."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.2.20", features = ["derive"] }
tempfile = "3"